--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # --- Required options --- #
 
 # Name of website
-title: Not Cool AI
+title: Randomly Ordered
 
 # Your name to show in the footer
-author: Amir Issaei & Ben Wilson
+author: Amir Issaei
 
 # --- List of links in the navigation bar --- #
 
@@ -27,7 +27,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/Not-Cool.jpg"
+avatar: "/assets/img/philosophy-mesbar.jpg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -42,7 +42,7 @@ round-avatar: true
 # Select the social network links that you want to show in the footer.
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  email: "info@notcoolai.com"
+  email: "amir.issaei@gmail.com"
   # facebook: notcoolai
   # github: notcoolai
   # twitter: notcoolai
@@ -80,7 +80,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "notcoolai.com"
+url-pretty: "randomlyordered.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
