new post - you are poorer than what you think

--- a/_config.yml
+++ b/_config.yml
@@ -43,11 +43,11 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 social-network-links:
   email: "amir.issaei@gmail.com"
-  # facebook: notcoolai
-  # github: notcoolai
-  # twitter: notcoolai
-  # patreon: notcoolai
-  # youtube: notcoolai
+  # facebook: randomlyordered
+  # github: randomlyordered
+  # twitter: randomlyordered
+  # patreon: randomlyordered
+  # youtube: randomlyordered
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
