--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # --- Required options --- #
 
 # Name of website
-title: Randomly Ordered
+title: Danoryml doerrde 
 
 # Your name to show in the footer
 author: Amir Issaei
