--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ social-network-links:
   # patreon: randomlyordered
   # youtube: randomlyordered
 #  reddit: yourname
-#  linkedin: daattali
+ linkedin: https://www.linkedin.com/in/amirissaei/
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
