--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 
 # --- Required options --- #
 
-# Name of website
+# Name of websitejjjj
 title: Danoryml doerrde 
 
 # Your name to show in the footer
