--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,8 @@
 
 # --- Required options --- #
 
-# Name of website
+# Name of websitekkk
+
 title: Danoryml doerrde 
 
 # Your name to show in the footer
